--- a/main.css
+++ b/main.css
@@ -3,30 +3,52 @@
   padding: 0;
   font-size: 100%;
   line-height: 1.5;
+  box-sizing: border-box;
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  background: url('assets/freedom.jpg') no-repeat center;
+  background: url("assets/freedom.jpg") no-repeat center;
   background-size: cover;
   color: black;
 }
 
 .szövegdoboz {
-  padding-top: 60px; /* ennyivel tolja le az oldal tetejéről */
+  position: relative;
+  top: 5%; /* ennyivel tolja le az oldal tetejéről */
   width: 90%;
-  margin: 0 auto; /* oldal közepére */
+  max-height: 50vh;
+  margin: auto; /* oldal közepére */
   text-align: center;
+
 }
 
 .idézet {
   font-family: 'Julius Sans One', sans-serif;
-  font-size: 2.5rem; 
+  font-size: 5vw;
+  top: 0;
 }
 
 .szerző {
   font-family: 'Crimson Text', serif;
-  font-size: 1.5rem;
+  font-size: 3vw;
   font-style: italic;
+  text-align: center;
+  
 }
+
+@media (min-width: 768px) {
+
+.szövegdoboz {
+  width: 70%;
+}
+.idézet {
+  font-size: 2rem;
+}  
+.szerző {
+  font-size: 1rem;
+}
+
+}
+  
