--- a/main.css
+++ b/main.css
@@ -38,6 +38,26 @@ body {
   
 }
 
+#nyelv-választó {
+  font-family: sans-serif;
+  font-size: .8rem;
+  text-align: center;
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  padding: 5px 10px;
+  border-radius: 6px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.25); 
+  border: 1px solid white;
+  padding: 5px 10px;
+  border-radius: 6px;
+}
+
 @media (min-width: 768px) {
 
 .szövegdoboz {
